Mouse coordinates update
Fixed state handling for mouse coordinates relative to the game area.

--- a/JSGame/index.html
+++ b/JSGame/index.html
@@ -9,8 +9,12 @@
     <title>Vite App</title>
   </head>
   <body>
-
+    <div id="game">
+      <h2 id="mousePosition"></h2>
+    </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/character.js"></script>
+    <script type="module" src="/mouseaiming.js"></script>
+    <script type="module" src="/globalState.js"></script>
   </body>
 </html>
