--- a/JSGame/index.html
+++ b/JSGame/index.html
@@ -13,10 +13,13 @@
   </head>
   <body>
     <div id="game">
+
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/character.js"></script>
     <script type="module" src="/mouseaiming.js"></script>
     <script type="module" src="/globalState.js"></script>
+    <script type="module" src="/playerUI.js"></script>
+    
   </body>
 </html>
