Big update towards multiplayer
Adding UI for player2 and fixing logic to accomodate second player.

--- a/JSGame/index.html
+++ b/JSGame/index.html
@@ -18,8 +18,8 @@
     <script type="module" src="/main.js"></script>
     <script type="module" src="/character.js"></script>
     <script type="module" src="/mouseaiming.js"></script>
-    <script type="module" src="/globalState.js"></script>
-    <script type="module" src="/playerUI.js"></script>
+    <script type="module" src="/State/globalState.js"></script>
+    <script type="module" src="/Player UI/playerUIPlayer1.js"></script>
     
   </body>
 </html>
