--- a/JSGame/index.html
+++ b/JSGame/index.html
@@ -16,8 +16,8 @@
 
     </div>
     <script type="module" src="/main.js"></script>
-    <script type="module" src="/character.js"></script>
-<!--     <script type="module" src="/mouseaiming.js"></script>
+<!--     <script type="module" src="//character.js"></script>
+ --><!--     <script type="module" src="/mouseaiming.js"></script>
  -->   <!--  <script type="module" src="/State/globalState.js"></script> -->
 <!--     <script type="module" src="/Player UI/playerUIPlayer1.js"></script>
     <script type="module" src="/Player UI/playerUIPlayer2.js"></script> -->
